--- a/blog_post/style.css
+++ b/blog_post/style.css
@@ -39,6 +39,9 @@ h2 {
 
 .author-text {
     font-size: 22px;
+    float: left;
+    margin-top: 40px;
+    margin-left: 15px;
 }
 .container {
     width: 1148px;
@@ -49,6 +52,7 @@ h2 {
     width: 75%;
     float: left;
     padding-right: 30px;
+    position: relative;
 }
 
 .other-post {
@@ -59,4 +63,25 @@ h2 {
 .author-box {
     border-top: 1px solid #727272;
     padding-top: 20px;
+}
+
+.other {
+    margin-bottom: 40px;
+}
+.author-box img {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    float: left;
+    
+}
+.blog-post img {
+    height: 150px;
+    width: auto;
+    
+}
+.date {
+    position: absolute;
+    top: 10px;
+    right: 30px;
 }
